fix z-index class lists and startendclassGroup

--- a/src/assets/stylesheets/nice-select.css
+++ b/src/assets/stylesheets/nice-select.css
@@ -113,7 +113,7 @@
     -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
     -o-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
     transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
-    z-index: 3; }
+    z-index: 1000; }
     .nice-select .list:hover .option:not(:hover) {
       background-color: transparent !important; }
   .nice-select .option {
